<resources>
    <string name="app_name">cmmonui</string>
    <string name="app_cancel">取消</string>
    <string name="app_close">关闭</string>
    <string name="app_save">保存</string>
    <string name="app_not_save">不保存</string>
    <string name="app_copy">复制</string>
    <string name="app_settings">设置</string>
    <string name="app_help">帮助</string>
    <string name="app_find">发现</string>
    <string name="app_quit">退出</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="download_success">下载成功</string>
    <string name="download_fail">下载失败</string>
    <string name="setting_success">设置成功</string>
    <string name="setting_fail">设置失败</string>
    <string name="app_done">完成</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_time_year">年</string>
    <string name="app_time_years">年份</string>
    <string name="app_time_month">月</string>
    <string name="app_time_months">月份</string>
    <string name="app_time_day">天</string>
    <string name="app_time_hour">时</string>
    <string name="app_time_hours">小时</string>
    <string name="app_time_minute">分</string>
    <string name="app_time_minutes">分钟</string>
    <string name="app_time_second">秒</string>
    <string name="app_forget_pwd">忘记密码?</string>
    <string name="app_confirm_pwd">确认密码</string>
    <string name="app_sure">确定</string>
    <string name="app_confirm">确认</string>
    <string name="app_submit">提交</string>
    <string name="app_clear">清空</string>
    <string name="app_next_step">下一步</string>
    <string name="app_i_know">我知道了</string>
    <string name="app_know">知道了</string>
    <string name="app_progress_bar_msg">正在加载...</string>
    <string name="app_progress_wait_msg">正在加载，请稍候……</string>
    <string name="data_error">数据有误!</string>
    <string name="data_error_to_try">数据有误! 请重试</string>
    <string name="load_fail">加载失败</string>
    <string name="load_time_out">加载超时！</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="app_more">更多</string>
    <string name="app_verify">验证</string>
    <string name="app_warning">警告</string>
    <string name="app_del">删除</string>
    <string name="app_text_full">全文</string>
    <string name="app_back">返回</string>
    <string name="app_comment">评论</string>
    <string name="app_reply">回复</string>
    <string name="app_notice">通知</string>
    <string name="app_phone">手机</string>
    <string name="app_title">标题</string>
    <string name="app_phone_num">手机号</string>
    <string name="app_phone_number">手机号码</string>
    <string name="app_bind">绑定</string>
    <string name="app_data_error">数据错误</string>
    <string name="app_test_text_short">这是测试文本这是测试文本</string>
    <string name="app_test_text_middle">这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本</string>
    <string name="app_test_text_long">这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本这是测试文本</string>
    <string name="text_copy_result_ok">已复制到剪切板</string>

    <string name="click_load_more">点击加载更多</string>
    <string name="no_more_data">没有更多啦</string>
    <string name="no_data">没有更多啦</string>
    <string name="loading_fail">加载失败，点击重试</string>
    <string name="loading">@string/app_progress_bar_msg</string>
</resources>
