<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <!--加载中 默认显示-->
        <RelativeLayout
            android:id="@+id/rlLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateDrawable="@drawable/progressbar_refresh" />

                <TextView
                    android:id="@+id/tvLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/pbLoading"
                    android:padding="15dp"
                    android:text="@string/loading"
                    android:textColor="@color/app_color_font_f95555"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <!--加载失败-->
        <LinearLayout
            android:id="@+id/llFail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color_font_f2f2f2"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_color_font_f2f2f2" />

            <TextView
                android:id="@+id/tvFail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/loading_fail"
                android:textColor="#989898"
                android:textSize="16sp" />

        </LinearLayout>

        <!--加载到底 没有更多数据了-->
        <LinearLayout
            android:id="@+id/llEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color_font_f2f2f2"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:id="@+id/tvEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/no_more_data"
                android:textColor="@color/app_color_font_aaaaaa"
                android:textSize="16sp" />

        </LinearLayout>

        <!--空白页 无数据-->
        <LinearLayout
            android:id="@+id/llEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:background="@color/white"
            android:gravity="center"
            tools:visibility="visible"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/no_data"
                android:textColor="@color/app_color_font_aaaaaa"
                android:textSize="16sp" />
        </LinearLayout>

        <!--加载完毕 点击加载更多-->
        <LinearLayout
            android:id="@+id/llFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            tools:visibility="gone"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_color_font_f2f2f2" />

            <TextView
                android:id="@+id/tvFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/click_load_more"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>
</merge>